remove preview flag